--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,4 +1,36 @@
-# copy to .env and fill values
+# Application
+NODE_ENV=development
+PORT=4000
+FRONTEND_URL=http://localhost:5173
+
+# Database
+MONGO_URI=mongodb+srv://username:password@cluster.mongodb.net/ocean-insight?retryWrites=true&w=majority
+
+# JWT Configuration
+JWT_SECRET=your_jwt_secret_key_here_change_in_production
+JWT_EXPIRY=1h
+REFRESH_TOKEN_EXPIRY=7d
+
+# Email Service (SMTP)
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_SECURE=false
+SMTP_USER=your-email@gmail.com
+SMTP_PASSWORD=your-app-specific-password
+SMTP_FROM_EMAIL=no-reply@oceaninsight.com
+
+# Cloudinary (for media uploads)
+CLOUDINARY_CLOUD_NAME=your_cloud_name
+CLOUDINARY_API_KEY=your_api_key
+CLOUDINARY_API_SECRET=your_api_secret
+
+# Logging
+LOG_LEVEL=info
+
+# Optional: API Rate Limiting
+RATE_LIMIT_WINDOW_MS=900000
+RATE_LIMIT_MAX_REQUESTS=100
+
 # default port is 4000, can be changed
 PORT=4000
 MONGO_URI=mongodb://localhost:27017/ocean_insight
