--- a/backend/package.json
+++ b/backend/package.json
@@ -14,13 +14,21 @@
   "license": "MIT",
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "cloudinary": "^1.37.0",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-rate-limit": "^7.0.0",
     "helmet": "^7.0.0",
+    "joi": "^17.10.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.5.0",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.6",
+    "winston": "^3.11.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
@@ -29,6 +37,8 @@
     "@types/jsonwebtoken": "^9.0.2",
     "@types/morgan": "^1.9.4",
     "@types/mongoose": "^5.11.97",
+    "@types/multer": "^1.4.8",
+    "@types/nodemailer": "^6.4.13",
     "eslint": "^8.0.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-import": "^2.27.5",
